--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="test_image_and_result col-xs-12">
                 <li class="col-sm-4 col-xs-12">
                 <b>Headphones</b>
-                <img src="http://assets.stickpng.com/images/580b57fbd9996e24bc43bfbf.png" class="img-resposive">
+                <img src="head.png" class="img-resposive">
             </li>
             <h5 class="col-sm-4 col-xs-12">
                 Output on <b>Google Lens- </b>
